setup github pages

--- a/app.json
+++ b/app.json
@@ -1,6 +1,9 @@
 {
   "expo": {
     "name": "BluetoothAudioShare",
+    "experiments": {
+      "baseUrl": "/ShareAudio/"
+    },
     "plugins": [
       [
         "expo-av",
