--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-bluetooth-classic": "^1.73.0-rc.16",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
